--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,24 @@
+server:
+  port: 8080
+
 spring:
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/testdb
-    username: root
-    password: Minsung1234
-  jpa:
-    open-in-view: true
-    hibernate:
-      ddl-auto: create
-    properties:
-      hibernate:
-        show_sql: true
-        format_sql: true
-      dialect: org.hibernate.dialect.MySQL8InnoDBDialect
-  sql:
-    init:
-      mode: never
+  profiles:
+    default: local
 
+---
+spring:
+  config:
+    activate:
+      on-profile: dev
 
+---
+spring:
+  config:
+    activate:
+      on-profile: local
+
+---
+spring:
+  config:
+    activate:
+      on-profile: test
